--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "ejs": "^3.1.9",
     "express-session": "^1.17.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "mongoose": "^8.0.3",
+    "dotenv": "^16.3.1"
   }
 }
 
