--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js",
-    "check-icons": "node scripts/download-icons-helper.js"
+    "dev": "node --watch server.js"
   },
   "keywords": ["pwa", "client-manager", "brajdarpan"],
   "author": "Ritik Goyal",
@@ -16,7 +15,6 @@
     "express": "^4.18.2",
     "ejs": "^3.1.9",
     "express-session": "^1.17.3",
-    "uuid": "^9.0.1",
     "mongoose": "^8.0.3",
     "dotenv": "^16.3.1"
   }
